[TASK-4] Feature: Roles. Apply widget roles for Modals.

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
     </div>
   </div>
 
-  <div id="modal-card" class="modal modal-fx-3dSlit">
+  <div id="modal-card" class="modal modal-fx-3dSlit" role="dialog">
     <div class="modal-background"></div>
     <div class="modal-content is-tiny">
       <div class="card">
@@ -1232,23 +1232,23 @@
         </div>
       </div>
     </div>
-    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
+    <button class="modal-close is-large" role="button"><span class="visually-hidden">Close button</span></button>
   </div>
 
-  <div id="modal-image1" class="modal modal-fx-3dSlit">
+  <div id="modal-image1" class="modal modal-fx-3dSlit" role="dialog">
     <div class="modal-background"></div>
     <div class="modal-content is-huge is-image">
       <img src="https://source.unsplash.com/random/?sig=1" alt="">
     </div>
-    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
+    <button class="modal-close is-large" role="button"><span class="visually-hidden">Close button</span></button>
   </div>
 
-  <div id="modal-image2" class="modal modal-fx-superScaled">
+  <div id="modal-image2" class="modal modal-fx-superScaled" role="dialog">
     <div class="modal-background"></div>
     <div class="modal-content  is-image">
       <img src="https://source.unsplash.com/random/?sig=3" alt="">
     </div>
-    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
+    <button class="modal-close is-large" role="button"><span class="visually-hidden">Close button</span></button>
   </div>
 
   <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
