[TASK-4] Feature: Labels or Names. For all <section> tag use WAI-ARIA attributes ‘aria-label’ or ‘aria-labelledby’ to create unique names that describe the purpose of each landmark.

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   </header>
 
   <main>
-    <section class="section" id="about">
+    <section class="section" id="about" aria-labelledby="aboutTitle" aria-describedby="aboutSubtitle">
       <div class="section-heading has-text-centered">
-        <h2 class="title is-2">About Us</h2>
-        <h5 class="subtitle is-5">We of all trades, master of "some"</h5>
+        <h2 class="title is-2" id="aboutTitle">About Us</h2>
+        <h5 class="subtitle is-5" id="aboutSubtitle">We of all trades, master of "some"</h5>
         <div class="container">
           <p>Web developers with more than <b>4 years</b> of well-rounded experience with a degree in the
             field of
@@ -210,11 +210,11 @@
       </div>
     </section>
 
-    <section class="hero has-background-grey-light" id="features">
+    <section class="hero has-background-grey-light" id="features" aria-labelledby="featuresTitle" aria-describedby="featuresSubtitle">
       <div class="container features">
         <div class="section-heading has-text-centered">
-          <h2 class="title is-2">Three key features</h2>
-          <h5 class="subtitle is-5">We don't hide what we do</h5>
+          <h2 class="title is-2" id="featuresTitle">Three key features</h2>
+          <h5 class="subtitle is-5" id="featuresSubtitle">We don't hide what we do</h5>
         </div>
 
         <div class="columns">
@@ -267,11 +267,11 @@
       </div>
     </section>
 
-    <section class="hero is-info">
+    <section class="hero is-info" aria-labelledby="topicsTitle" aria-describedby="topicsSubtitle">
       <div class="hero-body">
         <div class="container">
-          <div class="title">List of topics</div>
-          <div class="subtitle">We are always in touch we the outside world</div>
+          <div class="title" id="topicsTitle">List of topics</div>
+          <div class="subtitle" id="topicsSubtitle">We are always in touch we the outside world</div>
         </div>
       </div>
       <nav class="tabs is-boxed is-centered main-menu" id="nav" role="navigation">
@@ -298,7 +298,7 @@
       </nav>
     </section>
 
-    <section class="tab-content container">
+    <section class="tab-content container" aria-labelledby="tabsTitle" aria-describedby="tabsSubtitle">
       <div class="tab-pane is-active" id="pane-1" class="level" role="tabpanel" aria-labelledby="tab-1">
         <div class="container">
           <div class="columns features">
@@ -428,11 +428,11 @@
       </div>
     </section>
 
-    <section class="section has-background-grey-lighter" id="events">
+    <section class="section has-background-grey-lighter" id="events" aria-labelledby="eventsTitle" aria-describedby="eventsSubtitle">
       <div class="container has-text-centered">
           <div class="section-heading has-text-centered">
-            <h2 class="title is-2">Upcoming events</h2>
-            <h5 class="subtitle is-5">Outcoming dates for the best options</h5>
+            <h2 class="title is-2" id="eventsTitle">Upcoming events</h2>
+            <h5 class="subtitle is-5" id="eventsSubtitle">Outcoming dates for the best options</h5>
           </div>
 
         <div class="tile is-ancestor">
@@ -503,10 +503,10 @@
       </div>
     </section>
 
-    <section class="section" id="services">
+    <section class="section" id="services" aria-labelledby="servicesTitle" aria-describedby="servicesSubtitle">
       <div class="section-heading has-text-centered">
-        <h2 class="title is-2">Services</h2>
-        <h5 class="subtitle is-5">What can I do for you?</h5>
+        <h2 class="title is-2" id="servicesTitle">Services</h2>
+        <h5 class="subtitle is-5" id="servicesSubtitle">What can I do for you?</h5>
       </div>
       <div class="container">
         <div class="columns">
@@ -551,10 +551,10 @@
       </div>
     </section>
 
-    <section class="section has-background-grey-lighter" id="photos">
+    <section class="section has-background-grey-lighter" id="photos" aria-labelledby="photosTitle">
       <div class="container">
         <div class="section-heading has-text-centered">
-          <h2 class="title is-2">Photos from past events</h2>
+          <h2 class="title is-2" id="photosTitle">Photos from past events</h2>
         </div>
 
         <div class="container portfolio-container">
@@ -740,11 +740,11 @@
       </div>
       </section>
 
-    <section class="section" id="forum">
+    <section class="section" id="forum" aria-labelledby="forumTitle" aria-describedby="forumSubtitle">
       <div class="container">
         <div class="section-heading has-text-centered">
-          <h2 class="title is-2">Forum</h2>
-          <h5 class="subtitle is-5">Discuss any topic with no leaving this page</h5>
+          <h2 class="title is-2" id="forumTitle">Forum</h2>
+          <h5 class="subtitle is-5" id="forumSubtitle">Discuss any topic with no leaving this page</h5>
         </div>
 
         <div class="columns">
@@ -913,11 +913,11 @@
       </div>
     </section>
 
-    <section class="section has-background-light" id="contactUs">
+    <section class="section has-background-light" id="contactUs" aria-labelledby="contactUsTitle" aria-describedby="contactUsSubtitle">
       <div class="container">
         <div class="section-heading has-text-centered">
-          <h2 class="title is-2">Contact us</h2>
-          <h5 class="subtitle is-5">Don't hesitate, ask anything</h5>
+          <h2 class="title is-2" id="contactUsTitle">Contact us</h2>
+          <h5 class="subtitle is-5" id="contactUsSubtitle">Don't hesitate, ask anything</h5>
         </div>
 
         <form class="column is-half is-offset-one-quarter box">
