[TASK-4] Feature: Properties & States. Add aria-hidden attribute for elements which should not be vocalized by screen readers (e.g. icons)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="navbar-end">
               <li class="navbar-item">
                 <button class="button is-white is-outlined">
-                  <span class="icon">
+                  <span class="icon" aria-hidden="true">
                     <i class="fa fa-home"></i>
                   </span>
                   <span>Home</span>
@@ -53,7 +53,7 @@
               </li>
               <li class="navbar-item">
                 <button class="button is-white is-outlined">
-                  <span class="icon">
+                  <span class="icon" aria-hidden="true">
                     <i class="fab fa-superpowers"></i>
                   </span>
                   <span>Examples</span>
@@ -61,7 +61,7 @@
               </li>
               <li class="navbar-item">
                 <button class="button is-white is-outlined">
-                  <span class="icon">
+                  <span class="icon" aria-hidden="true">
                     <i class="fa fa-book"></i>
                   </span>
                   <span>Documentation</span>
@@ -69,7 +69,7 @@
               </li>
               <li class="navbar-item">
                 <button class="button is-white is-outlined">
-                  <span class="icon">
+                  <span class="icon" aria-hidden="true">
                     <i class="fab fa-github"></i>
                   </span>
                   <span>View Source</span>
@@ -278,19 +278,19 @@
         <ul role="tablist">
           <li data-target="pane-1" id="1" class="is-active" role="tab" aria-controls="panel-1">
             <a href="" aria-current="page" class="link">
-              <span class="icon is-small"><i class="fa fa-image"></i></span>
+              <span class="icon is-small" aria-hidden="true"><i class="fa fa-image"></i></span>
               <span>Pictures</span>
             </a>
           </li>
           <li data-target="pane-3" id="3" role="tab" aria-controls="panel-3">
             <a href="" aria-current="page" class="link">
-              <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
+              <span class="icon is-small" aria-hidden="true"><i class="fab fa-superpowers"></i></span>
               <span>Team</span>
             </a>
           </li>
           <li data-target="pane-4" id="4" role="tab" aria-controls="panel-4">
             <a href="" aria-current="page" class="link">
-              <span class="icon is-small"><i class="fa fa-film"></i></span>
+              <span class="icon is-small" aria-hidden="true"><i class="fa fa-film"></i></span>
               <span>Video</span>
             </a>
           </li>
@@ -783,7 +783,8 @@
                     </div>
                   </div>
                   <div class="media-right">
-                    <span class="has-text-grey-light"><i class="fa fa-comments"></i> 1</span>
+                    <span class="has-text-grey-light"><i class="fa fa-comments" aria-hidden="true"></i> 1</span>
+                    <span class="visually-hidden">Comments</span>
                   </div>
                 </div>
               </div>
@@ -807,7 +808,8 @@
                     </div>
                   </div>
                   <div class="media-right">
-                    <span class="has-text-grey-light"><i class="fa fa-comments"></i> 0</span>
+                    <span class="has-text-grey-light"><i class="fa fa-comments" aria-hidden="true"></i> 0</span>
+                    <span class="visually-hidden">Comments</span>
                   </div>
                 </div>
               </div>
@@ -831,7 +833,8 @@
                     </div>
                   </div>
                   <div class="media-right">
-                    <span class="has-text-grey-light"><i class="fa fa-comments"></i> 13</span>
+                    <span class="has-text-grey-light"><i class="fa fa-comments" aria-hidden="true"></i> 13</span>
+                    <span class="visually-hidden">Comments</span>
                   </div>
                 </div>
               </div>
@@ -855,7 +858,8 @@
                     </div>
                   </div>
                   <div class="media-right">
-                    <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                    <span class="has-text-grey-light"><i class="fa fa-comments" aria-hidden="true"></i> 2</span>
+                    <span class="visually-hidden">Comments</span>
                   </div>
                 </div>
               </div>
@@ -879,7 +883,8 @@
                     </div>
                   </div>
                   <div class="media-right">
-                    <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                    <span class="has-text-grey-light"><i class="fa fa-comments" aria-hidden="true"></i> 2</span>
+                    <span class="visually-hidden">Comments</span>
                   </div>
                 </div>
               </div>
@@ -932,10 +937,10 @@
             <label class="label" for="usernameInput">Username</label>
             <div class="control has-icons-left has-icons-right">
               <input class="input is-success" type="text" id="usernameInput">
-              <span class="icon is-small is-left">
+              <span class="icon is-small is-left" aria-hidden="true">
                 <i class="fas fa-user"></i>
               </span>
-              <span class="icon is-small is-right">
+              <span class="icon is-small is-right" aria-hidden="true">
                 <i class="fas fa-check"></i>
               </span>
             </div>
@@ -946,10 +951,10 @@
             <label class="label" for="emailInput">Email</label>
             <div class="control has-icons-left has-icons-right">
               <input class="input is-danger" type="email" placeholder="Email input" value="hello@" id="emailInput">
-              <span class="icon is-small is-left">
+              <span class="icon is-small is-left" aria-hidden="true">
                 <i class="fas fa-envelope"></i>
               </span>
-              <span class="icon is-small is-right">
+              <span class="icon is-small is-right" aria-hidden="true">
                 <i class="fas fa-exclamation-triangle"></i>
               </span>
             </div>
