--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
           <div class="field">
             <label class="label" for="emailInput">Email</label>
             <div class="control has-icons-left has-icons-right">
-              <input class="input is-danger" type="email" placeholder="Email input" value="hello@" id="emailInput">
+              <input class="input is-danger" type="email" placeholder="Email input" value="hello@" id="emailInput" aria-invalid="true">
               <span class="icon is-small is-left" aria-hidden="true">
                 <i class="fas fa-envelope"></i>
               </span>
@@ -983,7 +983,7 @@
           <div class="field">
             <div class="control">
               <label class="checkbox">
-                <input type="checkbox">
+                <input type="checkbox" aria-checked="false">
                 I agree to the <a href="#" aria-current="page" class="link">terms and conditions</a>
               </label>
             </div>
